<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.leandro.notes.MainActivity">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:orderInCategory="90"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always"/>

    <item
        android:id="@+id/delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/toggleView"
        android:icon="@drawable/ic_grid_view_black"
        android:orderInCategory="100"
        android:title="@string/grid"
        app:showAsAction="ifRoom" />

</menu>
