<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editNoteBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    tools:context=".EditNoteBarFragment">

    <ImageButton
        android:id="@+id/micButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="?selectableItemBackground"
        android:contentDescription="@string/voice"
        android:src="@drawable/ic_mic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/photoButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="?selectableItemBackground"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/micButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/checkboxButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="?selectableItemBackground"
        android:contentDescription="@string/checkbox"
        android:src="@drawable/ic_check_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/photoButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/drawButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="?selectableItemBackground"
        android:contentDescription="@string/draw"
        android:src="@drawable/ic_pencil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkboxButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>