<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Login">

    <ImageView
        android:id="@+id/userProfile"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginBottom="108dp"
        android:clickable="false"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_account_circle"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="245dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="@string/form_username"
        android:ems="10"
        android:hint="@string/form_username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="245dp"
        android:layout_height="50dp"
        android:layout_marginBottom="88dp"
        android:autofillHints="@string/form_password"
        android:ems="10"
        android:hint="@string/form_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/signInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="181dp"
        android:layout_height="47dp"
        android:layout_marginBottom="56dp"
        android:text="@string/form_signin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>